--- a/view/src/app/app.component.scss
+++ b/view/src/app/app.component.scss
@@ -286,3 +286,119 @@ svg#clouds {
     visibility: hidden;
   }
 }
+
+button {
+  display: inline-block;
+  background-color: #00a95e;
+  border-radius: 10px;
+  border: 4px double #cccccc;
+  color: #eeeeee;
+  text-align: center;
+  font-size: 16px;
+  padding: 5px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+button:disabled {
+  color: red;
+  cursor: not-allowed;
+}
+
+button:hover {
+  background-color: #32a772;
+  color: black;
+}
+
+button:hover span {
+  padding-right: 25px;
+}
+
+button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+.input-flex {
+  display: flex;
+  justify-content: center;
+
+  div {
+    margin: 6px;
+  }
+}
+
+.form-group {
+  position: relative;
+  display: flex;
+  width: 100%;
+
+  &>span,
+  .form-field {
+    white-space: nowrap;
+    display: block;
+
+    &:not(:first-child):not(:last-child) {
+      border-radius: 0;
+    }
+
+    &:first-child {
+      border-radius: 6px 0 0 6px;
+    }
+
+    &:last-child {
+      border-radius: 0 6px 6px 0;
+    }
+
+    &:not(:first-child) {
+      margin-left: -1px;
+    }
+  }
+
+  .form-field {
+    position: relative;
+    z-index: 1;
+    flex: 1 1 auto;
+    width: 1%;
+    margin-top: 0;
+    margin-bottom: 0;
+    width: 300px;
+  }
+
+  &>span {
+    text-align: center;
+    padding: 8px 12px;
+    font-size: 14px;
+    line-height: 25px;
+    color: var(--group-color);
+    background: var(--group-background);
+    border: 1px solid var(--group-border);
+    transition: background .3s ease, border .3s ease, color .3s ease;
+  }
+
+  &:focus-within {
+    &>span {
+      color: var(--group-color-focus);
+      background: var(--group-background-focus);
+      border-color: var(--group-border-focus);
+    }
+  }
+}
