--- a/view/src/app/app.component.scss
+++ b/view/src/app/app.component.scss
@@ -32,7 +32,7 @@ p {
   height: 60px;
   display: flex;
   align-items: center;
-  background-color: #1976d2;
+  background-color: #32a772;
   color: white;
   font-weight: 600;
 }
@@ -118,13 +118,20 @@ svg.material-icons:not(:last-child) {
 }
 
 .card.highlight-card {
-  background-color: #1976d2;
+  background-color: #32a772;
   color: white;
   font-weight: 600;
   border: none;
   width: auto;
   min-width: 30%;
   position: relative;
+}
+
+.data {
+  background: #3faa5f;
+  color: white;
+  display: flex;
+  flex-direction: column;
 }
 
 .card.card.highlight-card span {
